# NAS2S3_backup

./: LICENSE  pyproject.toml
src/stores/: files.py
src/testing/: zipfile-test.py
